--- a/docs/index.org
+++ b/docs/index.org
@@ -34,6 +34,8 @@ Node.self()
 </style>
 #+END_EXPORT
 
+[[./bs-logo-dark.png]]
+
 * Introduction
 Like previous years, all competing clients are expected to provide a web
 application that is available at a routeable URL.
@@ -102,12 +104,18 @@ All responses are expected to have a =200 OK= status code.
     #+END_SRC
 
 *** Response Attributes
-    | Attribute  |            | Type   |                                                                   |
-    |------------+------------+--------+-------------------------------------------------------------------|
-    | *color*    |            | string | A valid css color. HSL, RBG, hex, or named colours are all valid. |
-    | *head_url* | /optional/ | url    | Url of an image to use for the head of your snake.                |
-    | *name*     |            | string | Your snake's name.                                                |
-    | *taunt*    | /optional/ | string | Message to display in the game client.                            |
+    :LOGBOOK:
+    CLOCK: [2017-03-02 Thu 00:19]--[2017-03-02 Thu 00:43] =>  0:24
+    :END:
+    | Attribute         |            | Type     |                                                      |
+    |-------------------+------------+----------+------------------------------------------------------|
+    | *color*           |            | [[#type-color][Color]]    | Primary color for your snake and avatar              |
+    | *name*            |            | string   | Your snake's name.                                   |
+    | *head_url*        | /optional/ | url      | Url of an image to use for the head of your snake.   |
+    | *taunt*           | /optional/ | string   | Message to display in the game client.               |
+    | *head_type*       | /optional/ | [[#type-head-type][HeadType]] | String matching one of the snake heads listed below. |
+    | *tail_type*       | /optional/ | [[#type-tail-type][TailType]] | String matching one of the snake tails listed below. |
+    | *secondary_color* | /optional/ | [[#type-color][Color]]    | Accent color used by some snake heads.               |
 
 *** Example Response
     - Code: =200 OK=
@@ -462,6 +470,62 @@ All responses are expected to have a =200 OK= status code.
      // the tail has been extended by 1 and the health restored to 100
    #+END_SRC
 
+** Color
+   :PROPERTIES:
+   :CUSTOM_ID: type-color
+   :END:
+   #+BEGIN_SRC
+   color :: hexcode | hsl | named_color | rbg
+   #+END_SRC
+
+   #+BEGIN_EXAMPLE
+   "gold"
+   #+END_EXAMPLE
+
+   #+BEGIN_EXAMPLE
+   "#ffffff"
+   #+END_EXAMPLE
+
+   #+BEGIN_EXAMPLE
+   "rgb(255, 255, 255)"
+   #+END_EXAMPLE
+
+   #+BEGIN_EXAMPLE
+   "hsl(255, 100%, 100%)"
+   #+END_EXAMPLE
+
+** HeadType
+   :PROPERTIES:
+   :CUSTOM_ID: type-head-type
+   :END:
+   A string matching one of the values listed below:
+   | Value         | Preview                                                      |
+   | ="bendr"=     | @@html:<img width="100px" src="./bendr-snakehead.png" />@@   |
+   | ="dead"=      | @@html:<img width="100px" src="./dead-snakehead.png" />@@    |
+   | ="fang"=      | @@html:<img width="100px" src="./fang-snakehead.png" />@@    |
+   | ="pixel"=     | @@html:<img width="100px" src="./pixel-snakehead.png" />@@   |
+   | ="regular"=   | @@html:<img width="100px" src="./regular-snakehead.png" />@@ |
+   | ="safe"=      | @@html:<img width="100px" src="./safe-snakehead.png" />@@    |
+   | ="sand-worm"= | @@html:<img width="100px" src="./sand-worm.png" />@@         |
+   | ="shades"=    | @@html:<img width="100px" src="./shades-snakehead.png" />@@  |
+   | ="smile"=     | @@html:<img width="100px" src="./smile-snakehead.png" />@@   |
+   | ="tongue"=    | @@html:<img width="100px" src="./tongue-snakehead.png" />@@  |
+
+** TailType
+   :PROPERTIES:
+   :CUSTOM_ID: type-tail-type
+   :END:
+   A string matching one of the values listed below:
+   | Value            | Preview                                                           |
+   | ="small-rattle"= | @@html:<img width="100px" src="./small-rattle-snaketail.png" />@@ |
+   | ="skinny-tail"=  | @@html:<img width="100px" src="./skinny-tail-snaketail.png" />@@  |
+   | ="round-bum"=    | @@html:<img width="100px" src="./round-bum-snaketail.png" />@@    |
+   | ="pointed"=      | @@html:<img width="100px" src="./pointed-snaketail.png" />@@      |
+   | ="pixel"=        | @@html:<img width="100px" src="./pixel-snaketail.png" />@@        |
+   | ="freckled"=     | @@html:<img width="100px" src="./freckled-snaketail.png" />@@     |
+   | ="fat-rattle"=   | @@html:<img width="100px" src="./fat-rattle-snaketail.png" />@@   |
+   | ="curled"=       | @@html:<img width="100px" src="./curled-snaketail.png" />@@       |
+   | ="block-bum"=    | @@html:<img width="100px" src="./block-bum-snaketail.png" />@@    |
 * Game Rules
 ** Objective
 
