Fix some inaccuracies in the docs
was missing mention of dead_snakes in /move.

Some examples were out of date.

--- a/docs/index.org
+++ b/docs/index.org
@@ -118,11 +118,14 @@ All responses are expected to have a =200 OK= status code.
     - Code: =200 OK=
     - Content:
     #+BEGIN_SRC js
-    {
+      {
           "color": "#FF0000",
+          "secondary_color": "#00FF00",
           "head_url": "http://placecage.com/c/100/100",
           "name": "Cage Snake",
           "taunt": "OH GOD NOT THE BEES"
+          "head_type": "pixel",
+          "tail_type": "pixel"
       }
     #+END_SRC
 *** Sample call
@@ -156,17 +159,18 @@ All responses are expected to have a =200 OK= status code.
    | *Headers* | Content-Type: application-json |
 
 *** Request Attributes
-    | Attribute | Type                    |                                                                                                                                                                                                                     |
-    |-----------+-------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-    | <l>       | <l>                     |                                                                                                                                                                                                                     |
-    | *food*    | Array<[[#type-point][Point]]>            | Array of all food currently on the board                                                                                                                                                                            |
-    | *game_id* | UUID                    |                                                                                                                                                                                                                     |
-    | *height*  | integer                 |                                                                                                                                                                                                                     |
-    | *snakes*  | Array<[[#type-snake][Snake]]>            | Array of all living snakes in the game                                                                                                                                                                              |
-    | *turn*    | integer                 | The current turn.                                                                                                                                                                                                   |
-    | *width*   | integer                 |                                                                                                                                                                                                                     |
-    | *you*     | UUID                    | A reference to your snake's id, the snake object can be found in =snakes=.                                                                                                                                          |
-    |-----------+-------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+    | Attribute    | Type         |                                                                            |
+    |--------------+--------------+----------------------------------------------------------------------------|
+    | <l>          | <l>          |                                                                            |
+    | *food*       | Array<[[#type-point][Point]]> | Array of all food currently on the board                                   |
+    | *game_id*    | UUID         |                                                                            |
+    | *height*     | integer      |                                                                            |
+    | *snakes*     | Array<[[#type-snake][Snake]]> | Array of all living snakes in the game                                     |
+    | *dead_snake* | Array<[[#type-snake][Snake]]> | Array of all dead snakes in the game                                       |
+    | *turn*       | integer      | The current turn.                                                          |
+    | *width*      | integer      |                                                                            |
+    | *you*        | UUID         | A reference to your snake's id, the snake object can be found in =snakes=. |
+    |--------------+--------------+----------------------------------------------------------------------------|
 
 *** Example Request
     #+BEGIN_SRC elixir :remsh org-server@localhost :sname org-console :wrap "SRC js" :eval no-export :exports results :results value
@@ -202,6 +206,12 @@ All responses are expected to have a =200 OK= status code.
         name: "other-snake",
         taunt: "gotta go fast",
         url: "localhost:4001",
+        cause_of_death: %BattleSnake.Death{
+          turn: 0,
+          causes: [
+            %BattleSnake.Death.StarvationCause{}
+          ]
+        }
       }
 
       food = [p(1,1)]
@@ -223,14 +233,14 @@ All responses are expected to have a =200 OK= status code.
     #+RESULTS[e909af054857d10965dd9905fdf8433dcd44ba75]:
     #+BEGIN_SRC js
     {
-      "you": "25229082-f0d7-4315-8c52-6b0ff23fb1fb",
+      "you": "2c4d4d70-8cca-48e0-ac9d-03ecafca0c98",
       "width": 2,
       "turn": 0,
       "snakes": [
         {
           "taunt": "git gud",
           "name": "my-snake",
-          "id": "25229082-f0d7-4315-8c52-6b0ff23fb1fb",
+          "id": "2c4d4d70-8cca-48e0-ac9d-03ecafca0c98",
           "health_points": 93,
           "coords": [
             [
@@ -250,7 +260,7 @@ All responses are expected to have a =200 OK= status code.
         {
           "taunt": "gotta go fast",
           "name": "other-snake",
-          "id": "0fd33b05-37dd-419e-b44f-af9936a0a00c",
+          "id": "c35dcf26-7f48-492c-b7b5-94ae78fbc713",
           "health_points": 50,
           "coords": [
             [
@@ -269,7 +279,7 @@ All responses are expected to have a =200 OK= status code.
         }
       ],
       "height": 2,
-      "game_id": "870d6d79-93bf-4941-8d9e-944bee131167",
+      "game_id": "a2facef2-b031-44ba-a36c-0859c389ef96",
       "food": [
         [
           1,
@@ -280,7 +290,7 @@ All responses are expected to have a =200 OK= status code.
         {
           "taunt": "gotta go fast",
           "name": "other-snake",
-          "id": "c4e48602-197e-40b2-80af-8f89ba005ee9",
+          "id": "83fdf2b9-c8d0-44f4-acb2-0c506139079e",
           "health_points": 50,
           "coords": [
             [
